Form sizing/responsiveness/alignment fixed

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -4,9 +4,11 @@
 */
 
 * {
+*, *:before, *:after{
 	padding: 0;
 	border: none;
 	margin: 0;
+	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; /* Use border box model */
 }
 
 html {
@@ -174,16 +176,14 @@ div#about-us-main-idea > h3 {
 
 /* Demands testing email input area */
 form {
-	margin: auto;
 	margin-top: 50px;
-	width: 85%;
+	width: 100%;
+	padding: 0 10%;
 }
 
 form > p {
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 8%;
-    padding-right: 8%;
 }
 
 #demands-testing-info {
@@ -195,20 +195,21 @@ form > p {
 	color: #002b5b;
 	padding: 7px;
 	font-family: "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
-	float: left;
-	margin-left: 9%;
 }
 
 #basic-email-submit {
 	background: url(../img/yellow-nav-arrow.png) no-repeat left center;
 	background-size: 100% 100%;
 	padding-right: 20px;
-	margin-left: 15px;
+	width: 25%;
+	float: right;
+	cursor: pointer;
 	font-size: 1em;
 }
 
 #basic-email-input {
-	width: 50%;
+	width: 70%;
+	float: left;
 	font-size: 1em;
 }
 
@@ -216,7 +217,7 @@ form > p {
 	margin-top: 17px;
 	margin-bottom: 17px;
 	resize: none;
-	width: 80%;
+	width: 100%;
 	font-size: 1em;
 }
 
